@@ -1,5 +1,9 @@
 2006-09-10 Bart Hakvoort <hakvoort@cvs.gnome.org>
 
+	* src/GParted_Core.cc: display total sector info in copy_filesystem()
+
+2006-09-10 Bart Hakvoort <hakvoort@cvs.gnome.org>
+
 	* src/Dialog_Progress.cc: make sure progressfraction stays between 0.0
 	  and 1.0
 	* include/GParted_Core.h,
